--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     color: white;
     line-height: 1.5;
     font-weight: 500;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
 
 
 }
@@ -113,4 +113,51 @@
 }
 .btn--red:hover{
     background-color: rgb(241, 115, 115);
+}
+
+.works{
+    display: flex;
+    flex-wrap: wrap;
+}
+.works__item{
+    width: 25%;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+    border:white 1px solid;
+}
+.works__item:hover .works__content{
+    opacity: 1;
+}
+.works__photo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate3d(-50%,-50%,0);
+}
+.works__content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: rgba(232, 69, 69, .9) ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity 1s linear;
+}
+.works__title{
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.works__text{
+    font-size: 14px;
 }
